@@ -108,3 +108,4 @@ https://sinclairzxworld.com/viewtopic.php?p=44599#p44599
 DeZog load is working for SNA spectrum files but not for ZX81 .p file as it is now in v10.0
 
 -soporte para hat joystick en sdl. quiza uno comun para cocoa y sdl?
+En linux como tal aparecen como axis. En SDL aparecen como hat
