@@ -1229,3 +1229,104 @@ int realjoystick_is_linux_native(void)
 	return 0;
 }
 
+
+
+void realjoystick_common_set_hat(int boton,int direccion)
+{
+
+    //int valorfinalaxis=0;
+
+    //Left, Right en valor de boton
+    //Down, UP en valor de boton+1
+    //TODO: esto es completamente arbitrario y solo para poder usar bien funcion realjoystick_common_set_event como si fuera un AXIS
+
+
+    //Valores deducidos mediante dos joystick con hat: 
+    //0,1,2,3,4,5,6,7 empezando con direccion arriba y yendo en las agujas del reloj
+
+
+    int bitmask_direction=0;  //Up 8 Down 4 Left 2 Right 1  
+
+    #define BITMASK_DIR_UP    8
+    #define BITMASK_DIR_DOWN  4
+    #define BITMASK_DIR_LEFT  2
+    #define BITMASK_DIR_RIGHT 1
+
+    //TODO: podria enviar las direcciones directamente desde este switch pero queda mas limpio enviarlas abajo,
+    //tambien me ahorro sentencias de realjoystick_common_set_event repetidas para las diagonales
+
+    switch(direccion) {
+        case 0: //up
+            bitmask_direction |= BITMASK_DIR_UP;
+        break;
+
+        case 1: //up+right
+            bitmask_direction |= BITMASK_DIR_UP | BITMASK_DIR_RIGHT;
+        break;
+
+        case 2: //right
+            bitmask_direction |= BITMASK_DIR_RIGHT;
+        break;
+
+        case 3: //down+right
+            bitmask_direction |= BITMASK_DIR_RIGHT | BITMASK_DIR_DOWN;
+        break;
+
+        case 4: //down
+            bitmask_direction |= BITMASK_DIR_DOWN;
+        break;
+
+        case 5: //down+left
+            bitmask_direction |= BITMASK_DIR_DOWN | BITMASK_DIR_LEFT;
+        break;
+
+        case 6: //left
+            bitmask_direction |= BITMASK_DIR_LEFT;
+        break;
+
+        case 7: //left+up
+            bitmask_direction |= BITMASK_DIR_LEFT | BITMASK_DIR_UP;
+        break;
+
+
+    }
+
+    
+
+    //boton: up : -32767 down: 32767
+    //boton+1 left: -32767, right: 32767
+
+    if (bitmask_direction) {
+        if (bitmask_direction&BITMASK_DIR_UP) {
+            realjoystick_common_set_event(boton,REALJOYSTICK_INPUT_EVENT_AXIS,-32767);    
+            menu_info_joystick_last_raw_value=-32767;
+        }
+
+        if (bitmask_direction&BITMASK_DIR_DOWN) {
+            realjoystick_common_set_event(boton,REALJOYSTICK_INPUT_EVENT_AXIS,+32767);    
+            menu_info_joystick_last_raw_value=+32767;
+        }
+
+        if (bitmask_direction&BITMASK_DIR_LEFT) {
+            realjoystick_common_set_event(boton+1,REALJOYSTICK_INPUT_EVENT_AXIS,-32767);    
+            menu_info_joystick_last_raw_value=-32767;
+        }
+
+        if (bitmask_direction&BITMASK_DIR_RIGHT) {
+            realjoystick_common_set_event(boton+1,REALJOYSTICK_INPUT_EVENT_AXIS,+32767);    
+            menu_info_joystick_last_raw_value=+32767;
+        }                
+
+
+        realjoystick_hit=1;
+
+    }
+
+    //y si es 0, reseteamos movimiento
+    else {
+        realjoystick_common_set_event(boton,REALJOYSTICK_INPUT_EVENT_AXIS,0);
+        realjoystick_common_set_event(boton+1,REALJOYSTICK_INPUT_EVENT_AXIS,0);
+    }
+
+
+}
